fix source code view on mobile

--- a/src/routes/article/[slug]/style.css
+++ b/src/routes/article/[slug]/style.css
@@ -59,3 +59,9 @@
     margin-top: 20px;
     border: 1px solid white;
 }
+
+@media (max-width: 960px) {
+    .highlight {
+        overflow-x: scroll;
+    }
+}
